--- a/wp/wp-content/themes/wfn2017/css/page.css
+++ b/wp/wp-content/themes/wfn2017/css/page.css
@@ -5,25 +5,111 @@
 /* サイズ */
 /* フォントサイズ */
 /* カラー */
-.sidebar { padding-top: 25px; padding-bottom: 25px; }
-.sidebar h2 { margin: 0; padding: 5px; background: #94c554; color: #fff; }
-.sidebar .banner-container { padding: 5px 0 0; background: #f4f4f4; }
-.sidebar .banner-container .banner-item { padding: 0 5px 5px; }
-.sidebar ul { margin: 0; padding: 0; list-style-type: none; text-align: left; }
-.sidebar ul li { margin: 0; padding: 0; }
-.sidebar ul li.current_page_item a { background-color: #ecfada; background-image: url(../images/common/list-mark-gr.png); background-position: 9px 1.5em; background-repeat: no-repeat; }
-.sidebar ul li a { display: block; padding: 15px 5px 15px 23px; background-color: #f4f4f4; background-image: url(../images/common/list-mark-gr.png); background-position: 9px 1.5em; background-repeat: no-repeat; color: #2d2d2d; }
-.sidebar ul li a:hover { background-color: #ecfada; color: #2d2d2d; text-decoration: none; }
+.sidebar {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
 
-.site-header { height: 415px; background: url(../images/common/bg-header.png) center center repeat-x; }
-.site-header .main-image { position: relative; height: 357px; padding-top: 30px; }
-.site-header #signboard { position: absolute; right: 0; bottom: 0; left: 0; width: 600px; height: 320px; margin: auto; padding: 30px 75px 50px; background: url(../images/common/bg-signboard.png) center center no-repeat; }
-.site-header .site-title { width: 100%; }
-.site-header .site-title img { width: 70%; height: auto; }
-.site-header .page-title { line-height: .8; font-weight: normal; font-size: 2rem; color: #046a37; }
-.site-header .page-title span { font-size: 1.14rem; color: #777; }
+.sidebar h2 {
+  margin: 0;
+  padding: 5px;
+  background: #94c554;
+  color: #fff;
+}
 
-#primary { width: 100%; max-width: 1000px; margin: auto; /*
+.sidebar .banner-container {
+  padding: 5px 0 0;
+  background: #f4f4f4;
+}
+
+.sidebar .banner-container .banner-item {
+  padding: 0 5px 5px;
+}
+
+.sidebar ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-align: left;
+}
+
+.sidebar ul li {
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar ul li.current_page_item a {
+  background-color: #ecfada;
+  background-image: url(../images/common/list-mark-gr.png);
+  background-position: 9px 1.5em;
+  background-repeat: no-repeat;
+}
+
+.sidebar ul li a {
+  display: block;
+  padding: 15px 5px 15px 23px;
+  background-color: #f4f4f4;
+  background-image: url(../images/common/list-mark-gr.png);
+  background-position: 9px 1.5em;
+  background-repeat: no-repeat;
+  color: #2d2d2d;
+}
+
+.sidebar ul li a:hover {
+  background-color: #ecfada;
+  color: #2d2d2d;
+  text-decoration: none;
+}
+
+.site-header {
+  height: 415px;
+  background: url(../images/common/bg-header.png) center center repeat-x;
+}
+
+.site-header .main-image {
+  position: relative;
+  height: 357px;
+  padding-top: 30px;
+}
+
+.site-header #signboard {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 600px;
+  height: 320px;
+  margin: auto;
+  padding: 30px 75px 50px;
+  background: url(../images/common/bg-signboard.png) center center no-repeat;
+}
+
+.site-header .site-title {
+  width: 100%;
+}
+
+.site-header .site-title img {
+  width: 70%;
+  height: auto;
+}
+
+.site-header .page-title {
+  line-height: .8;
+  font-weight: normal;
+  font-size: 2rem;
+  color: #046a37;
+}
+
+.site-header .page-title span {
+  font-size: 1.14rem;
+  color: #777;
+}
+
+#primary {
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
+  /*
 	.section {
 		
 		&:nth-child(odd) {
@@ -36,67 +122,266 @@
 			background: $bgColor;
 		}
 	} // .section
-*/ }
+*/
+}
 
-#secondary { width: 100%; margin: auto; }
-#secondary .section { padding: 30px 20px; background: #fefbe4; }
+#secondary {
+  width: 100%;
+  margin: auto;
+}
 
-#main { /*
-// アーカイブページ
-*/ /*
-// シングルページ
-*/ }
-#main .page-title { padding: 25px 10px 25px; background: url(../images/common/bg-pagetitle.png) center bottom no-repeat; }
-#main .section { margin-bottom: 50px; }
-#main .section-inner h2 { margin-top: 30px; padding: 15px 10px; background: #f4f4f4 url(../images/common/bg-subtitle.png) left center no-repeat; }
-#main.archive .page-title { margin-top: 30px; margin-bottom: 20px; padding: 0; background: url(../images/common/bg-article-title.png) left center no-repeat; text-align: left; font-size: 2rem; font-weight: 700; }
-#main.archive .page-title .title { display: block; padding: 25px 0 25px 70px; background: url(../images/common/bg-title-border.png) left bottom no-repeat; }
-#main.archive article { padding: 10px 0; }
-#main.archive .image-box { padding: 0; }
-#main.archive .image-box img { width: 100%; }
-#main.archive .text-box h2 { margin: 0 0 5px; padding: 0 0 5px 25px; background: url(../images/common/bg-archive-title.png) 3px top no-repeat; border-bottom: 1px dotted #0e6939; }
-#main.archive .text-box h2 .date { float: left; width: 20%; padding: .25rem 5px 0; font-size: 0.92rem; font-weight: normal; }
-#main.archive .text-box h2 .title { float: left; width: 80%; padding: 0 5px; font-size: 1.29rem; }
-#main.archive .text-box h2 .title a { color: #2d2d2d; }
-#main.archive .text-box h2 .title a:hover { color: #2d2d2d; }
-#main.archive .pagenavi a, #main.archive .pagenavi span { border-width: 2px; }
-#main .article-header { margin: 0; padding: 0 0 5px; border-bottom: 3px solid #94c554; }
-#main .article-header .article-title { margin-bottom: 0; padding: 18px 0 18px 70px; background: url(../images/common/bg-article-title.png) left center no-repeat; font-size: 2rem; font-weight: 700; }
-#main .article-header .article-date { margin: 0; padding: 0; }
-#main .social { padding: 10px 0; }
-#main .social .social-list { padding: 0; list-style-type: none; }
-#main .social .social-list .social-item { display: inline-block; }
-#main .social .social-list .social-item .sns-button { display: inline-block; }
-#main .social .social-list .social-item .fb-like { overflow: hidden !important; }
-#main .article-content { margin: 25px 0; line-height: 1.8; }
-#main .article-content img, #main .article-content iframe { max-width: 100%; height: auto; }
-#main .article-content p { position: relative; }
-#main .article-content img.aligncenter { float: none; display: block; margin-right: auto; margin-left: auto; }
-#main .page-navi { padding: 10px 0; border-top: 3px solid #94c554; }
-#main .page-navi .prev { padding-left: 0; }
-#main .page-navi .prev a { display: block; padding-left: 25px; background: url(../images/common/bg-prev.png) left 0.1em no-repeat; }
-#main .page-navi .next { padding-right: 0; }
-#main .page-navi .next a { display: block; padding-right: 25px; background: url(../images/common/bg-next.png) right 0.1em no-repeat; }
+#secondary .section {
+  padding: 30px 20px;
+  background: #f09875;
+}
 
-#sessions #main table th { background: #fefbe4; }
+#main {
+  /*
+	// アーカイブページ
+	*/
+  /*
+	// シングルページ
+	*/
+}
 
-#entry #main .tix-column-remaining { display: none; }
+#main .page-title {
+  padding: 25px 10px 25px;
+  background: url(../images/common/bg-pagetitle.png) center bottom no-repeat;
+}
 
-@media screen and (max-width: 767px) { .site-header { height: auto; background-position: center top; }
-  .site-header .main-image { height: auto; margin-top: 40px; }
-  .site-header #signboard { position: relative; width: 100%; height: auto; padding: 55px 30px 45px; background-size: 100% auto; background-position: center bottom; }
-  .site-header #signboard .site-title { margin-bottom: 10px; }
-  .site-header #signboard .site-title img { width: 65%; }
-  .site-header #signboard .page-title { margin: 0; font-size: 1.5rem; }
-  .site-header #signboard .page-title span { font-size: 0.86rem; }
-  #primary { width: 100%; }
-  #main.archive .text-box { padding: 5px 0; }
-  #main.archive .text-box h2 { background-position: left center; }
-  #main.archive .text-box h2 .date, #main.archive .text-box h2 .title { display: block; float: none; width: 100%; }
-  #main.archive .text-box h2 .date { padding: 0 0 3px; }
-  #main .section { margin-bottom: 0; }
-  #main .section .article-title { margin: 0; }
-  #sessions #main table { display: block; width: 100%; }
-  #sessions #main table thead, #sessions #main table tbody, #sessions #main table col, #sessions #main table tr, #sessions #main table th, #sessions #main table td { display: block; width: 100%; } }
+#main .section {
+  margin-bottom: 50px;
+}
 
-/*# sourceMappingURL=page.css.map */
+#main .section-inner h2 {
+  margin-top: 30px;
+  padding: 15px 10px;
+  background: #f4f4f4 url(../images/common/bg-subtitle.png) left center no-repeat;
+}
+
+#main.archive .page-title {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  padding: 0;
+  background: url(../images/common/bg-article-title.png) left center no-repeat;
+  text-align: left;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+#main.archive .page-title .title {
+  display: block;
+  padding: 25px 0 25px 70px;
+  background: url(../images/common/bg-title-border.png) left bottom no-repeat;
+}
+
+#main.archive article {
+  padding: 10px 0;
+}
+
+#main.archive .image-box {
+  padding: 0;
+}
+
+#main.archive .image-box img {
+  width: 100%;
+}
+
+#main.archive .text-box h2 {
+  margin: 0 0 5px;
+  padding: 0 0 5px 25px;
+  background: url(../images/common/bg-archive-title.png) 3px top no-repeat;
+  border-bottom: 1px dotted #0e6939;
+}
+
+#main.archive .text-box h2 .date {
+  float: left;
+  width: 20%;
+  padding: 0.25rem 5px 0;
+  font-size: 0.92rem;
+  font-weight: normal;
+}
+
+#main.archive .text-box h2 .title {
+  float: left;
+  width: 80%;
+  padding: 0 5px;
+  font-size: 1.29rem;
+}
+
+#main.archive .text-box h2 .title a {
+  color: #2d2d2d;
+}
+
+#main.archive .text-box h2 .title a:hover {
+  color: #2d2d2d;
+}
+
+#main.archive .pagenavi a,
+#main.archive .pagenavi span {
+  border-width: 2px;
+}
+
+#main .article-header {
+  margin: 0;
+  padding: 0 0 5px;
+  border-bottom: 3px solid #94c554;
+}
+
+#main .article-header .article-title {
+  margin-bottom: 0;
+  padding: 18px 0 18px 70px;
+  background: url(../images/common/bg-article-title.png) left center no-repeat;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+#main .article-header .article-date {
+  margin: 0;
+  padding: 0;
+}
+
+#main .social {
+  padding: 10px 0;
+}
+
+#main .social .social-list {
+  padding: 0;
+  list-style-type: none;
+}
+
+#main .social .social-list .social-item {
+  display: inline-block;
+}
+
+#main .social .social-list .social-item .sns-button {
+  display: inline-block;
+}
+
+#main .social .social-list .social-item .fb-like {
+  overflow: hidden !important;
+}
+
+#main .article-content {
+  margin: 25px 0;
+  line-height: 1.8;
+}
+
+#main .article-content img,
+#main .article-content iframe {
+  max-width: 100%;
+  height: auto;
+}
+
+#main .article-content p {
+  position: relative;
+}
+
+#main .article-content img.aligncenter {
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#main .page-navi {
+  padding: 10px 0;
+  border-top: 3px solid #94c554;
+}
+
+#main .page-navi .prev {
+  padding-left: 0;
+}
+
+#main .page-navi .prev a {
+  display: block;
+  padding-left: 25px;
+  background: url(../images/common/bg-prev.png) left 0.1em no-repeat;
+}
+
+#main .page-navi .next {
+  padding-right: 0;
+}
+
+#main .page-navi .next a {
+  display: block;
+  padding-right: 25px;
+  background: url(../images/common/bg-next.png) right 0.1em no-repeat;
+}
+
+#sessions #main table th {
+  background: #f09875;
+}
+
+#entry #main .tix-column-remaining {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .site-header {
+    height: auto;
+    background-position: center top;
+  }
+  .site-header .main-image {
+    height: auto;
+    margin-top: 40px;
+  }
+  .site-header #signboard {
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding: 55px 30px 45px;
+    background-size: 100% auto;
+    background-position: center bottom;
+  }
+  .site-header #signboard .site-title {
+    margin-bottom: 10px;
+  }
+  .site-header #signboard .site-title img {
+    width: 65%;
+  }
+  .site-header #signboard .page-title {
+    margin: 0;
+    font-size: 1.5rem;
+  }
+  .site-header #signboard .page-title span {
+    font-size: 0.86rem;
+  }
+  #primary {
+    width: 100%;
+  }
+  #main.archive .text-box {
+    padding: 5px 0;
+  }
+  #main.archive .text-box h2 {
+    background-position: left center;
+  }
+  #main.archive .text-box h2 .date,
+  #main.archive .text-box h2 .title {
+    display: block;
+    float: none;
+    width: 100%;
+  }
+  #main.archive .text-box h2 .date {
+    padding: 0 0 3px;
+  }
+  #main .section {
+    margin-bottom: 0;
+  }
+  #main .section .article-title {
+    margin: 0;
+  }
+  #sessions #main table {
+    display: block;
+    width: 100%;
+  }
+  #sessions #main table thead,
+  #sessions #main table tbody,
+  #sessions #main table col,
+  #sessions #main table tr,
+  #sessions #main table th,
+  #sessions #main table td {
+    display: block;
+    width: 100%;
+  }
+}
