--- a/wp/wp-content/themes/wfn2017/SCSS/_variables.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/_variables.scss
@@ -24,3 +24,5 @@ $fs-34: 2.43rem;
 $textColor:    #2d2d2d;
 $bgColor:      #f09875;
 $titleColor:   #0e6939;
+// タイトルやフッターボタン等の色
+$headlineColor: #e85524;
