--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -116,7 +116,8 @@ header #site-navigation {
 }
 
 .section:nth-child(2) {
-  background: #fff;
+  background-image: url(../images/top/bg-schedule.svg);
+  background-position: center top;
 }
 
 .section:nth-child(3) {
