トップのサポーターのレイアウト変更

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -150,8 +150,9 @@ header {
 	}
 	
 	h3 {
-		color: $titleColor;
+		color: $headlineColor;
 		font-weight: bold;
+		font-family: "じゅん 34", "Jun 34";
 	}
 	
 	ul {
