--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -144,8 +144,9 @@ header #site-navigation {
 }
 
 .section-inner h3 {
-  color: #0e6939;
+  color: #e85524;
   font-weight: bold;
+  font-family: "じゅん 34", "Jun 34";
 }
 
 .section-inner ul {
