--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -37,6 +37,24 @@ h2 {
 	color: $headlineColor;
 }
 
+// 2017 ->
+h3 {
+    
+}
+
+h4 {
+    
+}
+
+h5 {
+    
+}
+
+.box {
+    
+}
+// <- 2017
+
 ul {
 	padding-left: 2em;
 }
