--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -7,46 +7,9 @@
  */
 header {
 	
-	.main-image {
-		position: relative;
-		overflow: hidden;
-		width: 100%;
-		height: 1188px;
-		//background: url(../images/top/bg-main-image.png) center center repeat-x;
-		//background: $bgColor;
-		background: url(../images/top/bg-main.png) center center no-repeat;
-		
-		/*
-		.cover-upper {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			height: 275px;
-			background: url(../images/top/front-upper-image.png) center top no-repeat;
-		}
-		
-		.cover-lower {
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			height: 412px;
-			background: url(../images/top/front-lower-image.png) center bottom no-repeat;
-		}
-		*/
-		
-		/*
-		.cover {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background: url(../images/top/front-main-image.png) center center repeat-x;
-		}
-		*/
-	}
-	
+
 	.site-title {
-		margin: 150px auto 0;
+// 		margin: 150px auto 0;
 	}
 	
 	/*
@@ -98,10 +61,12 @@ header {
 	/*
 	 * ヘッダーナビゲーション
 	 */
+/*
 	#site-navigation {
 		padding: 20px 15px 25px;
 		background: url(../images/navigation/bg-navigation.png) center bottom repeat-x;
 	} // #site-navigation
+*/
 } // header
 
 .section {
