--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -21,44 +21,12 @@ header {
   /*
 	 * ヘッダーナビゲーション
 	 */
-}
-
-header .main-image {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 1188px;
-  background: url(../images/top/bg-main.png) center center no-repeat;
   /*
-		.cover-upper {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			height: 275px;
-			background: url(../images/top/front-upper-image.png) center top no-repeat;
-		}
-		
-		.cover-lower {
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			height: 412px;
-			background: url(../images/top/front-lower-image.png) center bottom no-repeat;
-		}
-		*/
-  /*
-		.cover {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background: url(../images/top/front-main-image.png) center center repeat-x;
-		}
-		*/
-}
-
-header .site-title {
-  margin: 150px auto 0;
+	#site-navigation {
+		padding: 20px 15px 25px;
+		background: url(../images/navigation/bg-navigation.png) center bottom repeat-x;
+	} // #site-navigation
+*/
 }
 
 header #signboard {
@@ -89,11 +57,6 @@ header .bxslider li img {
   width: 100%;
   margin: 0;
   padding: 0;
-}
-
-header #site-navigation {
-  padding: 20px 15px 25px;
-  background: url(../images/navigation/bg-navigation.png) center bottom repeat-x;
 }
 
 .section {
