CSS3 ボタン調整

--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -333,11 +333,14 @@ header {
   background: #e85524;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
+  color: white;
+  font-size: $fs-18;
 }
 
 .btn:hover {
   background: #e85524;
   text-decoration: none;
+  color: white;
 }
 
 /*
