トグルメニュー修正

--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -217,6 +217,10 @@ header {
 }
 
 @media screen and (min-width: 37.5em) {
+	.menu-toggle {
+		display: none;
+	}
+  
 	.main-navigation {
 		background: #c11329;
 	}
@@ -259,6 +263,10 @@ header {
 		box-shadow: none;
 		top: 40px;
 		text-align: left;
+	}
+
+	.main-navigation ul {
+		display: block;
 	}
 
 	.main-navigation ul ul a {
