--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -88,10 +88,13 @@ header .site-header {
 # Navigation
 --------------------------------------------------------------*/
 .main-navigation {
-  background: #333;
   font-size: 0.9em;
   text-transform: uppercase;
   line-height: 3;
+  clear: both;
+  display: block;
+  float: left;
+  width: 100%;
 }
 
 .main-navigation a {
@@ -99,6 +102,8 @@ header .site-header {
   height: 40px;
   text-indent: 10px;
   padding: 13px 0;
+  display: block;
+  text-decoration: none;
 }
 
 .main-navigation a:hover {
@@ -302,36 +307,46 @@ header .site-header {
 /*
 // スマホ
 */
+/*
 @media screen and (max-width: 767px) {
-  .site-header #site-navigation {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    padding: 0;
-    background-image: none;
-  }
-  .site-header #site-navigation .menu-bar {
-    width: 100%;
-    height: 40px;
-    margin: 0;
-    padding: 5px 10px;
-    background: #0e6939;
-    line-height: 1;
-    text-align: right;
-  }
-  .site-header #site-navigation .menu-bar .menu-open {
-    width: 20px;
-    height: 20px;
-    margin: 5px;
-  }
-  .site-header #site-navigation ul {
-    display: none;
-    width: 100%;
-    z-index: 9998;
-    border-radius: 0;
-  }
-  .site-header #site-navigation ul li {
-    z-index: 9999;
-    text-align: left;
-  }
+	
+	.site-header {
+		
+		#site-navigation {
+			position: absolute;
+			top: 0;
+			width: 100%;
+			padding: 0;
+			background-image: none;
+			
+			.menu-bar {
+				width: 100%;
+				height: 40px;
+				margin: 0;
+				padding: 5px 10px;
+				background: $titleColor;
+				line-height: 1;
+				text-align: right;
+				
+				.menu-open {
+					width: 20px;
+					height: 20px;
+					margin: 5px;
+				}
+			}
+			
+			ul {
+				display: none;
+				width: 100%;
+				z-index: 9998;
+				border-radius: 0;
+				
+				li {
+					z-index: 9999;
+					text-align: left;
+				}
+			}
+		}
+	}
 }
+*/
