ナビゲーションのレイアウト修正

--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -119,7 +119,7 @@ header {
 // 	background: #333;
 	font-size: 0.9em;
 	text-transform: uppercase;
-	line-height: 3;
+	line-height: 1;
   clear: both;
 	display: block;
 	float: left;
@@ -147,6 +147,7 @@ header {
 
 .main-navigation li {
 	list-style: none;
+  position: relative;
 }
 
 .main-navigation .menu-toggle {
@@ -272,7 +273,9 @@ header {
 	}
 
 	.main-navigation ul {
+  	list-style: none;
 		display: block;
+    padding-left: 0;
 	}
 
 	.main-navigation ul ul a {
