--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -88,6 +88,7 @@ header .site-header {
 # Navigation
 --------------------------------------------------------------*/
 .main-navigation {
+  background: #c11329;
   font-size: 0.9em;
   text-transform: uppercase;
   line-height: 1;
@@ -108,7 +109,12 @@ header .site-header {
 
 .main-navigation a:hover {
   text-decoration: none;
-  background: #666;
+  opacity: 0.5;
+}
+
+.main-navigation ul {
+  list-style: none;
+  padding-left: 0;
 }
 
 .main-navigation ul,
@@ -149,16 +155,20 @@ header .site-header {
 }
 
 .main-navigation .menu-toggle:hover:before {
-  background: #333;
+  opacity: 0.5;
 }
 
 .main-navigation.toggled .menu-toggle:before {
   content: "\f00d";
 }
 
+.main-navigation.toggled ul {
+  display: block;
+}
+
 @media screen and (max-width: 37.5em) {
   .main-navigation .navigation-menu {
-    background: #333;
+    background: #c11329;
     padding: 0;
     position: absolute;
     top: 40px;
