ヘッダーのメインイメージレイアウト調整

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -83,7 +83,7 @@ header {
   	color: white;	
 	}
 }
-
+s
 
 .section {
 	
@@ -197,7 +197,7 @@ header {
 		
 		.main-image {
 			height: auto;
-			margin-top: 40px;
+// 			margin-top: 40px;
 			padding: 40px 10px 0;
 			background: none;
 
