--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -72,6 +72,7 @@ header .bxslider li img {
   color: white;
 }
 
+s
 .section {
   width: 100%;
   /*
@@ -87,23 +88,28 @@ header .bxslider li img {
 */
 }
 
+s
 .section:nth-child(1) {
   background: #f09875;
 }
 
+s
 .section:nth-child(2) {
   background-image: url(../images/top/bg-schedule.svg);
   background-position: center top;
 }
 
+s
 .section:nth-child(3) {
   background: #fff;
 }
 
+s
 .section:nth-child(4) {
   background: #f09875;
 }
 
+s
 .section:nth-child(5) {
   background: #fff;
 }
@@ -191,7 +197,6 @@ header .bxslider li img {
   }
   header .main-image {
     height: auto;
-    margin-top: 40px;
     padding: 40px 10px 0;
     background: none;
   }
