ヘッダーのメインイメージレイアウト調整

--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -105,6 +105,10 @@ header {
 	  position: relative;
     background: $headlineColor;
   }
+  
+  .site-header .site-branding h1 {
+	  margin: 0;
+  }
 
 	
 	/*
