--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -84,6 +84,11 @@ header .site-header {
   background: #e85524;
 }
 
+　
+header .site-header .site-branding h1 {
+  margin: 0;
+}
+
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
