トップ画面のロゴサイズ調整

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -9,6 +9,11 @@ header {
 	
   background: url(../images/common/bg-header.png) center center repeat-x;
 	background-size: auto 100%;
+	
+	.site-branding{
+  	margin: 0 auto;
+  	max-width: 600px;
+	}
 
 	.site-title {
 // 		margin: 150px auto 0;
