ロゴレイアウト調整

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -10,9 +10,10 @@ header {
   background: url(../images/common/bg-header.png) center center repeat-x;
 	background-size: auto 100%;
 	
-	.site-branding{
+	.main-image{
   	margin: 0 auto;
-  	max-width: 400px;
+  	max-width: 450px;
+    padding: 100px 10px;
 	}
 
 	.site-title {
