--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -132,11 +132,6 @@ header .site-header {
   position: relative;
 }
 
-.main-navigation li + li:before {
-  content: " | ";
-  padding: 0 10px;
-}
-
 .main-navigation .menu-toggle {
   background: #c11329;
   box-shadow: none;
@@ -218,7 +213,7 @@ header .site-header {
   }
   .main-navigation a:hover {
     text-decoration: none;
-    background: #333;
+    opacity: 0.5;
   }
   .main-navigation .navigation-menu {
     font-size: 0;
@@ -261,7 +256,7 @@ header .site-header {
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
   }
   .main-navigation ul ul li:hover a {
-    background: #666;
+    opacity: 0.5;
   }
 }
 
