--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -132,6 +132,10 @@ header .site-header {
   position: relative;
 }
 
+.main-navigation li:not(:first-child):before {
+  content: " | ";
+}
+
 .main-navigation .menu-toggle {
   background: #c11329;
   box-shadow: none;
