--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -164,8 +164,8 @@ header {
   position: relative;
 }
 
-.main-navigation li:not(:first-child):before {
-    content: " | ";
+.main-navigation li+li {
+  border-left: 1px solid #000000;
 }
 
 .main-navigation .menu-toggle {
