--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -132,8 +132,8 @@ header .site-header {
   position: relative;
 }
 
-.main-navigation li:not(:first-child):before {
-  content: " | ";
+.main-navigation li + li {
+  border-left: 1px solid #000000;
 }
 
 .main-navigation .menu-toggle {
