--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -132,8 +132,14 @@ header .site-header {
   position: relative;
 }
 
+/*
+.main-navigation li+li {
+  border-left: 1px solid white;
+}
+*/
 .main-navigation li + li {
-  border-left: 1px solid #000000;
+  content: "|";
+  color: white;
 }
 
 .main-navigation .menu-toggle {
