メニューのセパレータ

--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -132,16 +132,19 @@ header .site-header {
   position: relative;
 }
 
-/*
-.main-navigation li+li {
-  border-left: 1px solid white;
-}
-*/
 .main-navigation li + li {
-  content: "|";
+  content: "";
   color: white;
+  border-right: 1px solid white;
+  font-size: 10px;
 }
 
+/*
+.main-navigation li+li {
+  content: "|";
+  color:white;
+}
+*/
 .main-navigation .menu-toggle {
   background: #c11329;
   box-shadow: none;
