トップ画面のaboutのワプーの位置調整

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -255,6 +255,10 @@ header {
 			padding-bottom: 20px;
 			text-align: center;
 		}
+		
+		.right-box {
+  		text-align: center;
+		}
 	}
 	
 	.section-inner {
