--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -232,6 +232,9 @@ header .bxslider li img {
     padding-bottom: 20px;
     text-align: center;
   }
+  #sec-about .right-box {
+    text-align: center;
+  }
   .section-inner {
     width: 100%;
   }
