トップ画面のaboutのワプーの位置調整

--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -233,7 +233,7 @@ header .bxslider li img {
     text-align: center;
   }
   #sec-about .right-box {
-    float: center;
+    float: none;
   }
   .section-inner {
     width: 100%;
