トップ画面のaboutのワプーの位置調整

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -257,7 +257,9 @@ header {
 		}
 		
 		.right-box {
-  		float: none;
+			text-align: center;
+			margin-left: auto;
+			margin-right: auto;
 		}
 	}
 	
