--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -233,7 +233,9 @@ header .bxslider li img {
     text-align: center;
   }
   #sec-about .right-box {
-    float: none;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   .section-inner {
     width: 100%;
