トップ画面のソーシャルの各boxの背景色を設定

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -91,6 +91,20 @@ header {
 	h2 {
   	color: white;	
 	}
+	
+	.news-box ul{
+  	background-color: #fdede3;
+  	border-radius: 2px;
+	}
+	
+	.blog-box ul{
+  	background-color: #fdeee4;
+  	border-radius: 2px;
+	}
+	
+	.twitter-box #twitter-widget-0{
+  	background-color: #fdeee4;  	
+	}
 }
 
 
