--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -84,6 +84,20 @@ header .bxslider li img {
   color: white;
 }
 
+#sec-social .news-box ul {
+  background-color: #fdede3;
+  border-radius: 2px;
+}
+
+#sec-social .blog-box ul {
+  background-color: #fdeee4;
+  border-radius: 2px;
+}
+
+#sec-social .twitter-box #twitter-widget-0 {
+  background-color: #fdeee4;
+}
+
 .section {
   width: 100%;
   /*
