トップ画面のソーシャルの各boxの背景の調整

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -99,12 +99,14 @@ header {
 	
 	.blog-box ul{
   	background-color: #fdeee4;
-  	border-radius: 2px;
+  	border-radius: 5px;
 	}
 	
+/*
 	.twitter-box #twitter-widget-0{
   	background-color: #fdeee4;  	
 	}
+*/
 }
 
 
