メニュー不具合修正(サイト幅が小さい時に表示されたままになる)

--- a/wp/wp-content/themes/wfn2017/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/base.scss
@@ -151,6 +151,7 @@ header {
 .main-navigation ul{
   list-style: none;
   padding-left: 0;
+  display: none;
 }
 
 
@@ -164,19 +165,10 @@ header {
   position: relative;
 }
 
-/*
 .main-navigation li+li {
-  content: "";
-  color:white;
   border-right:1px solid white;
-  font-size: 10px;
 }
-*/
 
-.main-navigation li+li {
-  content: " | ";
-  color:white;
-}
 
 
 .main-navigation .menu-toggle {
