--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -134,7 +134,7 @@ header .site-header {
 }
 
 .main-navigation li + li {
-  border-right: 1px solid white;
+  border-left: 1px solid white;
 }
 
 .main-navigation .menu-toggle {
