メニューのセパレータ取り消し

--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -133,10 +133,11 @@ header .site-header {
   position: relative;
 }
 
-.main-navigation li + li {
-  border-left: 1px solid white;
+/*
+.main-navigation li+li {
+  border-left:1px solid white;
 }
-
+*/
 .main-navigation .menu-toggle {
   background: #c11329;
   box-shadow: none;
