add [ primary color ] setting

--- a/wp/wp-content/themes/wfn2017/SCSS/_variables.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/_variables.scss
@@ -21,6 +21,7 @@ $fs-34: 2.43rem;
 
 
 /* カラー */
+$primaryColor: #ea5514;
 $textColor:    #2d2d2d;
 $bgColor:      #f09875;
 $titleColor:   #0e6939;
