--- a/wp/wp-content/themes/wfn2017/css/page.css
+++ b/wp/wp-content/themes/wfn2017/css/page.css
@@ -136,6 +136,9 @@
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
   align-items: center;
   text-align: center;
 }
@@ -144,16 +147,18 @@
   border-top: 3px solid #ea5514;
   content: "";
   display: inline;
+  -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
   -moz-flex-grow: 1;
   -ms-flex-grow: 1;
   flex-grow: 1;
+  min-width: 1em;
 }
 #main .page-title:before {
-  margin-right: 1em;
+  margin-right: 0.75em;
 }
 #main .page-title:after {
-  margin-left: 1em;
+  margin-left: 0.75em;
 }
 #main .section {
   margin-bottom: 50px;
