--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -95,10 +95,14 @@
 		-ms-align-items: center;
 		align-items: center;
 		text-align: center;
+		-webkit-justify-content: center;
+		-moz-justify-content: center;
+		-ms-justify-content: center;
+		justify-content: center;
 	}
 	.page-title:before,
 	.page-title:after {
-		border-top: 3px solid $primaryColor;
+		border-top: 6px solid $primaryColor;
 		content: "";
 		display: inline;
 		-webkit-box-flex: 1;
@@ -107,12 +111,13 @@
 		-ms-flex-grow: 1;
 		flex-grow: 1;
 		min-width: 1em;
+		max-width: 135px;
 	}
 	.page-title:before {
-		margin-right: 0.75em;
+		margin-right: 1.25em;
 	}
 	.page-title:after {
-		margin-left: 0.75em;
+		margin-left: 1.25em;
 	}
 	
 	.section {
