h2見出し調整

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -155,6 +155,11 @@ header {
 		text-align: center;
 	}
 	
+  h2 {
+	  font-size: 5rem;
+    font-family: 'Pocket-Calculator';
+  }
+	
 	
 	h3 {
 		color: $headlineColor;
