--- a/wp/wp-content/themes/wfn2017/css/base.css
+++ b/wp/wp-content/themes/wfn2017/css/base.css
@@ -31,8 +31,10 @@ h1 {
 }
 
 h2 {
-  font-size: 5rem;
-  font-family: 'Pocket-Calculator';
+  /*
+	font-size: 5rem;
+	font-family: 'Pocket-Calculator';
+*/
   color: #e85524;
 }
 
