h2見出し調整

--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -152,6 +152,7 @@ header .bxslider li img {
 .section-inner h2 {
   font-size: 5rem;
   font-family: 'Pocket-Calculator';
+  color: #e85524;
 }
 
 .section-inner h3 {
